--- a/index.html
+++ b/index.html
@@ -1,11 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>ToDo list</title>
+
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
+    <link href="style.css" rel="stylesheet" />
+  </head>
+  <body>
+
+    <div class="container">
+
+      <div class="mt-5 d-flex align-self-center justify-content-center">
+        <input
+          class="d-block w-50 input-style justify-content-center p-3"
+          placeholder="enter your subject"
+          type="text"
+        />
+      </div>
+      <div class="mt-3 d-flex align-self-center justify-content-center">
+        <input
+          class="d-block w-75 input-style justify-content-center p-3"
+          placeholder="enter your description"
+          type="text"
+        />
+      </div>
+      <div class="d-flex w-100 justify-content-end mt-2">
+        <button class="button-add " type="button" name="myButton">Add</button>
+      </div>
+      <hr />
+
+    </div>
+
+    <div class="container">
+
+
+      <div class="row">
+
+
+        <div class="col col-3 border border-3 bg-danger rounded-4">
+            <p class="fs-5 m-0 mt-2  fw-bold text-center"> hi </p>
+            <hr class="m-0">
+            <p class="fs-6 mt-1 text-center"> now we can now whats happening is here well we goning to out </p>
+        </div>
+       
+
+    </div>
+
+<script src="index.js"> </script> 
+  </body>
 </html>
