--- a/index.html
+++ b/index.html
@@ -13,26 +13,26 @@
     />
     <link href="style.css" rel="stylesheet" />
   </head>
-  <body>
+  <body class="bg-light">
 
     <div class="container">
 
       <div class="mt-5 d-flex align-self-center justify-content-center">
-        <input
+        <input id="input-subject"     
           class="d-block w-50 input-style justify-content-center p-3"
           placeholder="enter your subject"
           type="text"
         />
       </div>
       <div class="mt-3 d-flex align-self-center justify-content-center">
-        <input
+        <input id="input-desc"
           class="d-block w-75 input-style justify-content-center p-3"
           placeholder="enter your description"
           type="text"
         />
       </div>
-      <div class="d-flex w-100 justify-content-end mt-2">
-        <button class="button-add " type="button" name="myButton">Add</button>
+      <div class="d-flex w-100 justify-content-end mt-2 ">
+        <button id="btn-add" class="button-add " type="button" name="myButton">Add</button>
       </div>
       <hr />
 
@@ -41,15 +41,7 @@
     <div class="container">
 
 
-      <div class="row">
-
-
-        <div class="col col-3 border border-3 bg-danger rounded-4">
-            <p class="fs-5 m-0 mt-2  fw-bold text-center"> hi </p>
-            <hr class="m-0">
-            <p class="fs-6 mt-1 text-center"> now we can now whats happening is here well we goning to out </p>
-        </div>
-       
+      <div id="mother-div-cards" class="row">
 
     </div>
 
