--- a/index.html
+++ b/index.html
@@ -1,50 +1,75 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ToDo list</title>
 
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-      crossorigin="anonymous"
-    />
-    <link href="style.css" rel="stylesheet" />
-  </head>
-  <body class="bg-light">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>ToDo list</title>
 
-    <div class="container">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
+  <link href="style.css" rel="stylesheet" />
+</head>
 
-      <div class="mt-5 d-flex align-self-center justify-content-center">
-        <input id="input-subject"     
-          class="d-block w-50 input-style justify-content-center p-3"
-          placeholder="enter your subject"
-          type="text"
-        />
-      </div>
-      <div class="mt-3 d-flex align-self-center justify-content-center">
-        <input id="input-desc"
-          class="d-block w-75 input-style justify-content-center p-3"
-          placeholder="enter your description"
-          type="text"
-        />
-      </div>
-      <div class="d-flex w-100 justify-content-end mt-2 ">
-        <button id="btn-add" class="button-add " type="button" name="myButton">Add</button>
-      </div>
-      <hr />
+<body class="bg-light">
+ 
+
+  <!-- Box of Inputs and button dor add and remove all -->
+  <div class="container">
+
+    <div class="mt-5 d-flex align-self-center justify-content-center">
+      <input id="input-subject" class="d-block w-50 input-style justify-content-center p-3"
+        placeholder="enter your subject" type="text" />
+    </div>
+    <div class="mt-3 d-flex align-self-center justify-content-center">
+      <input id="input-desc" class="d-block w-75 input-style justify-content-center p-3"
+        placeholder="enter your description" type="text" />
+    </div>
+    <div class="d-flex w-100 justify-content-end mt-2 ">
+      <button id="btn-remove-all" class="button-add  me-3 bg-danger " type="button" name="myButton">Clear All</button>
+      <button id="btn-add" class="button-add " type="button" name="myButton">Add</button>
 
     </div>
+    <hr />
 
-    <div class="container">
+  </div>
+
+  <div class="container">
 
 
-      <div id="mother-div-cards" class="row">
-
+    <!-- Box of cards -->
+    <div id="mother-div-cards" class="row">
     </div>
 
-<script src="index.js"> </script> 
-  </body>
+
+
+    <!-- Developer Message -->
+<!-- Message Box -->
+ <br> 
+ <br> 
+ <br> 
+ <br> 
+ <br> 
+ <br> 
+ <br> 
+ <br> 
+ <br> 
+ <br> 
+ <br> 
+ <br> 
+ <br> 
+ <hr> 
+<div class="m-md-5"> 
+  <p class="h1 fs-6 rounded rounded-2 bg-success fw-bold text-white d-inline m-3 p-3 "> Developer Message </p>
+  <p class="ms-5 fs-6  mt-5"> This is merely a test project and it may contain bugs. Any assistance to improve the performance of this code and enhance the program is welcome: </p>
+  <p class="ms-5  fs-6 fw-bold" >  <a class="me-3" href="https://github.com/Rspayx/simple-todo-list"> GitHub   </a>  <a class="ms-3" href="https://www.linkedin.com/in/rezadadfarr/"> LinkedIn </a> </p>
+
+</div>
+
+
+
+
+    <script src="index.js"> </script>
+</body>
+
 </html>
